fixed alphabet links sticky position to be visible when scrolling

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ mark {
     border-bottom: 1px solid var(--gray-100);
     padding: 0.5rem 2rem;
     position: sticky;
-    top: 105px;
+    top: 138px;
     z-index: 9;
 }
 
